--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,11 @@
       <artifactId>druid</artifactId>
       <version>1.2.8</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.32.3.2</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
