--- a/pom.xml
+++ b/pom.xml
@@ -50,18 +50,31 @@
 <!--      <version>2.1.0</version>-->
 <!--&lt;!&ndash;      <scope>provided</scope>&ndash;&gt;-->
 <!--    </dependency>-->
-    <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.hadoop</groupId>-->
+<!--      <artifactId>hadoop-common</artifactId>-->
+<!--      <version>2.7.3</version>-->
+<!--    </dependency>-->
+    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-common</artifactId>
-      <version>2.7.3</version>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3.1</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client -->
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
-      <version>2.7.3</version>
-    </dependency>
+
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.hadoop</groupId>-->
+<!--      <artifactId>hadoop-hdfs</artifactId>-->
+<!--      <version>2.7.3</version>-->
+<!--    </dependency>-->
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.hadoop</groupId>-->
+<!--      <artifactId>hadoop-client</artifactId>-->
+<!--      <version>2.7.3</version>-->
+<!--    </dependency>-->
 <!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.calcite/calcite-core &ndash;&gt;-->
 <!--    <dependency>-->
 <!--      <groupId>org.apache.calcite</groupId>-->
@@ -83,11 +96,11 @@
 <!--&lt;!&ndash;      <scope>test</scope>&ndash;&gt;-->
 <!--    </dependency>-->
 
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>18.0</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.google.guava</groupId>-->
+<!--      <artifactId>guava</artifactId>-->
+<!--      <version>18.0</version>-->
+<!--    </dependency>-->
 <!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java &ndash;&gt;-->
 <!--    <dependency>-->
 <!--      <groupId>com.google.protobuf</groupId>-->
@@ -96,17 +109,17 @@
 <!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-exec -->
-    <dependency>
-      <groupId>org.apache.hive</groupId>
-      <artifactId>hive-exec</artifactId>
-      <version>3.1.2</version>
-      <exclusions>
-        <exclusion>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.hive</groupId>-->
+<!--      <artifactId>hive-exec</artifactId>-->
+<!--      <version>3.1.2</version>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>com.google.guava</groupId>-->
+<!--          <artifactId>guava</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
 
 
   </dependencies>
