修改使得模板sql从参数化模板得到.

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 <!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.spark/spark-sql &ndash;&gt;-->
 <!--    <dependency>-->
